--- a/torch-examples.ipynb
+++ b/torch-examples.ipynb
@@ -2,6 +2,425 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import time\n",
+    "import numpy as np\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "print(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00000000\n",
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "start_time = time.time()\n",
+    "# matrix operations here\n",
+    "zeros = torch.zeros(1, 1)\n",
+    "end_time = time.time()\n",
+    "\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(f\"{elapsed_time:.8f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.03206944\n",
+      "0.13945627\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch_rand1 = torch.rand(100, 100, 100, 100).to(device)\n",
+    "torch_rand2 = torch.rand(100, 100, 100, 100).to(device)\n",
+    "np_rand1 = torch.rand(100, 100, 100, 100)\n",
+    "np_rand2 = torch.rand(100, 100, 100, 100)\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "rand = (torch_rand1 @ torch_rand2)\n",
+    "\n",
+    "end_time = time.time()\n",
+    "\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(f\"{elapsed_time:.8f}\")\n",
+    "\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "rand = np.multiply(np_rand1, np_rand2)\n",
+    "end_time = time.time()\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(f\"{elapsed_time:.8f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 1, 1, 1, 1, 1, 0, 1, 1, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# embeddings, torch.stack, torch.multinomial, torch.tril, torch.triu, input.T / input.transpose, nn.Linear, torch.cat, F.softmax (show all the examples of functions/methods with pytorch docs)\n",
+    "\n",
+    "\n",
+    "# Define a probability tensor\n",
+    "probabilities = torch.tensor([0.1, 0.9])\n",
+    "# 10% or 0.1 => 0, 90% or 0.9 => 1. each probability points to the index of the probability in the tensor\n",
+    "# Draw 5 samples from the multinomial distribution\n",
+    "samples = torch.multinomial(probabilities, num_samples=10, replacement=True)\n",
+    "print(samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor = torch.tensor([1, 2, 3, 4])\n",
+    "out = torch.cat((tensor, torch.tensor([5])), dim=0)\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0., 0., 0.],\n",
+       "        [1., 1., 0., 0., 0.],\n",
+       "        [1., 1., 1., 0., 0.],\n",
+       "        [1., 1., 1., 1., 0.],\n",
+       "        [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = torch.tril(torch.ones(5, 5))\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 1., 1., 1.],\n",
+       "        [0., 1., 1., 1., 1.],\n",
+       "        [0., 0., 1., 1., 1.],\n",
+       "        [0., 0., 0., 1., 1.],\n",
+       "        [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = torch.triu(torch.ones(5, 5))\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., -inf, -inf, -inf, -inf],\n",
+       "        [0., 0., -inf, -inf, -inf],\n",
+       "        [0., 0., 0., -inf, -inf],\n",
+       "        [0., 0., 0., 0., -inf],\n",
+       "        [0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = torch.zeros(5, 5).masked_fill(torch.tril(torch.ones(5, 5)) == 0, float('-inf'))\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0., 0., 0.],\n",
+       "        [1., 1., 0., 0., 0.],\n",
+       "        [1., 1., 1., 0., 0.],\n",
+       "        [1., 1., 1., 1., 0.],\n",
+       "        [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.exp(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 2, 4])\n",
+      "torch.Size([2, 4, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = torch.zeros(2, 3, 4)\n",
+    "out1 = input.transpose(0, 1)\n",
+    "out2 = input.transpose(-2,-1)\n",
+    "print(out1.shape)\n",
+    "print(out2.shape)\n",
+    "# torch.permute works the same but you provide the new order of dimensions instead of the dimensions you'd like to swap."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3],\n",
+       "        [4, 5, 6],\n",
+       "        [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor1 = torch.tensor([1, 2, 3])\n",
+    "tensor2 = torch.tensor([4, 5, 6])\n",
+    "tensor3 = torch.tensor([7, 8, 9])\n",
+    "\n",
+    "# Stack the tensors along a new dimension\n",
+    "stacked_tensor = torch.stack([tensor1, tensor2, tensor3])\n",
+    "stacked_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([12.9250, -3.0377,  1.8686], grad_fn=<SqueezeBackward4>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample = torch.tensor([10.,10.,10.])\n",
+    "linear = nn.Linear(3, 3, bias=False)\n",
+    "print(linear(sample))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.0900, 0.2447, 0.6652])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tensor\n",
+    "tensor1 = torch.tensor([1.0, 2.0, 3.0])\n",
+    "\n",
+    "# Apply softmax using torch.nn.functional.softmax()\n",
+    "softmax_output = F.softmax(tensor1, dim=0)\n",
+    "\n",
+    "print(softmax_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 6])\n",
+      "tensor([[-0.3209,  0.0962, -0.0692, -0.5159,  0.7349, -0.3470],\n",
+      "        [ 0.1611,  0.9880,  0.0237,  1.0812,  1.8651,  0.4241],\n",
+      "        [-1.1521, -0.7120, -0.0192,  0.6188,  0.6041,  0.5546],\n",
+      "        [-0.3432,  0.9566, -1.0303,  0.0255,  0.1361,  2.1876]],\n",
+      "       grad_fn=<EmbeddingBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize an embedding layer\n",
+    "vocab_size = 80\n",
+    "embedding_dim = 6\n",
+    "embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "\n",
+    "# Create some input indices\n",
+    "input_indices = torch.LongTensor([1, 5, 3, 2])\n",
+    "\n",
+    "# Apply the embedding layer\n",
+    "embedded_output = embedding(input_indices)\n",
+    "\n",
+    "# The output will be a tensor of shape (4, 100), where 4 is the number of inputs\n",
+    "# and 100 is the dimensionality of the embedding vectors\n",
+    "print(embedded_output.shape)\n",
+    "print(embedded_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -15,7 +434,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.4"
   }
  },
