--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "f326447b-28a7-4c70-a1af-490f85a61c54",
    "metadata": {},
    "outputs": [
@@ -16,6 +16,8 @@
    ],
    "source": [
     "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.nn import functional as F\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print(device)\n",
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "338579f0-c6a4-4061-9bf1-018ebec05f74",
    "metadata": {},
    "outputs": [
@@ -49,10 +51,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "e1f1200c-3de3-4872-80d0-c4eda375b0a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([80,  1,  1, 28, 39, 42, 39, 44, 32, 49,  1, 25, 38, 28,  1, 44, 32, 29,\n",
+      "         1, 47, 33, 50, 25, 42, 28,  1, 33, 38,  1, 39, 50,  0,  0,  1,  1, 26,\n",
+      "        49,  0,  0,  1,  1, 36, 11,  1, 30, 42, 25, 38, 35,  1, 26, 25, 45, 37,\n",
+      "         0,  0,  1,  1, 25, 45, 44, 32, 39, 42,  1, 39, 30,  1, 44, 32, 29,  1,\n",
+      "        47, 33, 50, 25, 42, 28,  1, 39, 30,  1, 39, 50,  9,  1, 44, 32, 29,  1,\n",
+      "        36, 25, 38, 28,  1, 39, 30,  1, 39, 50])\n"
+     ]
+    }
+   ],
    "source": [
     "string_to_int = { ch:i for i,ch in enumerate(chars) }\n",
     "int_to_string = { i:ch for i,ch in enumerate(chars) }\n",
@@ -60,26 +75,151 @@
     "decode = lambda l: ''.join([int_to_string[i] for i in l])\n",
     "\n",
     "data = torch.tensor(encode(text), dtype=torch.long)\n",
-    "# print(data[:100])"
+    "print(data[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6bc3bbc5-c695-47c1-b3d4-33fdcdcf5650",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 6251, 46257, 80641, 42710])\n",
+      "inputs:\n",
+      "tensor([[54,  1, 69, 54, 71, 54, 72, 68],\n",
+      "        [73, 72,  1, 55, 58, 73, 73, 58],\n",
+      "        [65, 68, 71, 58, 57,  1, 72, 74],\n",
+      "        [ 1, 76, 54, 73, 56, 61, 58, 57]], device='cuda:0')\n",
+      "targets:\n",
+      "tensor([[ 1, 69, 54, 71, 54, 72, 68, 65],\n",
+      "        [72,  1, 55, 58, 73, 73, 58, 71],\n",
+      "        [68, 71, 58, 57,  1, 72, 74, 67],\n",
+      "        [76, 54, 73, 56, 61, 58, 57,  1]], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(0.8*len(data))\n",
+    "train_data = data[:n]\n",
+    "val_data = data[n:]\n",
+    "\n",
+    "def get_batch(split):\n",
+    "    data = train_data if split == 'train' else val_data\n",
+    "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
+    "    # print(ix)\n",
+    "    x = torch.stack([data[i:i+block_size] for i in ix])\n",
+    "    y = torch.stack([data[i+1:i+block_size+1] for i in ix])\n",
+    "    x, y = x.to(device), y.to(device)\n",
+    "    return x, y\n",
+    "\n",
+    "x, y = get_batch('train')\n",
+    "print('inputs:')\n",
+    "# print(x.shape)\n",
+    "print(x)\n",
+    "\n",
+    "\n",
+    "print('targets:')\n",
+    "print(y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6bc3bbc5-c695-47c1-b3d4-33fdcdcf5650",
+   "id": "ef7221f3-ce29-491c-ae9e-7d823c98fc6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = int(0.8*len(data))\n",
-    "train_data = data[:n]\n",
-    "val_data = data[n:]\n",
-    "\n"
+    "@torch.no_grad()\n",
+    "def estimate_loss():\n",
+    "    out = {}\n",
+    "    model.eval()\n",
+    "    for split in ['train', 'val']:\n",
+    "        losses = torch.zeros(eval_iters)\n",
+    "        for k in range(eval_iters):\n",
+    "            X, Y = get_batch(split)\n",
+    "            logits, loss = model(X, Y)\n",
+    "            losses[k] = loss.item()\n",
+    "        out[split] = losses.mean()\n",
+    "    model.train()\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d84b2e44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "w-VxIz)kjhb9AJu:vCEI(DBs00﻿hr:hqNbfhqg[HMhApZd[kl&M﻿]3itq-*nj;Zw_D﻿w5u5'IGDYEP[:Fy2\"Mqt*VWYxopwxkV[HhFy\n",
+      "LUrSrOzM_3sb?w;vzTuP])gg'hv5fNhggI]]LF.Dcv0OVApUUBPVvBSVV_8TNuVAACH(.oiJuC2's0ggMK\n",
+      "rjr5X\n",
+      "CFC74Iv﻿YbNzM_)d-EJ:X\n",
+      "DD-Goa﻿9PA,FVU]3]oK﻿Ppe!,-Ib' YUWu4 u2UWL4OUhn3C*!-!,[]sAn[o?,H\"P2fpKuunWVTNuhWh3bu gDKiPV(N9\"lHaggyZfF0!-BMXC,blHKOwqtOwI()S3r\n",
+      "vx[NDS\n",
+      "i\n",
+      "f6146\n",
+      "mJewiH;ibV2kOU7;f:m*!:ZNWlHKDw\n",
+      "'XeGur﻿3g[WQOU&*V[kjWqxY!1U-*&\n",
+      ",fa4oTNI(Nn:Db.s,4R[ky)q0OJ5wI(O-VaSXh_VO,l4 g_K\"QyVU0Lkg5XN]stEkZnt!X:﻿bT2Nf]_R\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BigramLanguageModel(nn.Module):\n",
+    "    def __init__(self, vocab_size):\n",
+    "        super().__init__()\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
+    "        \n",
+    "    def forward(self, index, targets=None):\n",
+    "        logits = self.token_embedding_table(index)\n",
+    "        \n",
+    "        \n",
+    "        if targets is None:\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            B, T, C = logits.shape\n",
+    "            logits = logits.view(B*T, C)\n",
+    "            targets = targets.view(B*T)\n",
+    "            loss = F.cross_entropy(logits, targets)\n",
+    "        \n",
+    "        return logits, loss\n",
+    "    \n",
+    "    def generate(self, index, max_new_tokens):\n",
+    "        # index is (B, T) array of indices in the current context\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            # get the predictions\n",
+    "            logits, loss = self.forward(index)\n",
+    "            # focus only on the last time step\n",
+    "            logits = logits[:, -1, :] # becomes (B, C)\n",
+    "            # apply softmax to get probabilities\n",
+    "            probs = F.softmax(logits, dim=-1) # (B, C)\n",
+    "            # sample from the distribution\n",
+    "            index_next = torch.multinomial(probs, num_samples=1) # (B, 1)\n",
+    "            # append sampled index to the running sequence\n",
+    "            index = torch.cat((index, index_next), dim=1) # (B, T+1)\n",
+    "        return index\n",
+    "\n",
+    "model = BigramLanguageModel(vocab_size)\n",
+    "m = model.to(device)\n",
+    "\n",
+    "context = torch.zeros((1,1), dtype=torch.long, device=device)\n",
+    "generated_chars = decode(m.generate(context, max_new_tokens=500)[0].tolist())\n",
+    "print(generated_chars)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef7221f3-ce29-491c-ae9e-7d823c98fc6a",
+   "id": "0d77b923",
    "metadata": {},
    "outputs": [],
    "source": []
