--- a/torch-examples.ipynb
+++ b/torch-examples.ipynb
@@ -532,6 +532,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.tensor([10], dtype=torch.float32)\n",
+    "y = F.tanh(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
