--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f326447b-28a7-4c70-a1af-490f85a61c54",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "338579f0-c6a4-4061-9bf1-018ebec05f74",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "41115646",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e1f1200c-3de3-4872-80d0-c4eda375b0a3",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "296632bd",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6bc3bbc5-c695-47c1-b3d4-33fdcdcf5650",
    "metadata": {},
    "outputs": [
@@ -156,21 +156,21 @@
      "text": [
       "inputs:\n",
       "torch.Size([32, 128])\n",
-      "tensor([[ 568,  569,  570,  ...,  693,  694,  695],\n",
-      "        [4385, 4386, 4387,  ..., 4510, 4511, 4512],\n",
-      "        [ 856,  857,  858,  ...,  981,  982,  983],\n",
+      "tensor([[1629, 1630, 1631,  ..., 1754, 1755, 1756],\n",
+      "        [1708, 1709, 1710,  ..., 1833, 1834, 1835],\n",
+      "        [ 178,  179,  180,  ...,  303,  304,  305],\n",
       "        ...,\n",
-      "        [ 303,  304,  305,  ...,  428,  429,  430],\n",
-      "        [ 721,  722,  723,  ...,  846,  847,  848],\n",
-      "        [2798, 2799, 2800,  ..., 2923, 2924, 2925]], device='cuda:0')\n",
+      "        [2288, 2289, 2290,  ..., 2413, 2414, 2415],\n",
+      "        [2928, 2929, 2930,  ..., 3053, 3054, 3055],\n",
+      "        [2524, 2525, 2526,  ..., 2649, 2650, 2651]], device='cuda:0')\n",
       "targets:\n",
-      "tensor([[ 569,  570,  571,  ...,  694,  695,  696],\n",
-      "        [4386, 4387, 4388,  ..., 4511, 4512, 4513],\n",
-      "        [ 857,  858,  859,  ...,  982,  983,  984],\n",
+      "tensor([[1630, 1631, 1632,  ..., 1755, 1756, 1757],\n",
+      "        [1709, 1710, 1711,  ..., 1834, 1835, 1836],\n",
+      "        [ 179,  180,  181,  ...,  304,  305,  306],\n",
       "        ...,\n",
-      "        [ 304,  305,  306,  ...,  429,  430,  431],\n",
-      "        [ 722,  723,  724,  ...,  847,  848,  849],\n",
-      "        [2799, 2800, 2801,  ..., 2924, 2925, 2926]], device='cuda:0')\n"
+      "        [2289, 2290, 2291,  ..., 2414, 2415, 2416],\n",
+      "        [2929, 2930, 2931,  ..., 3054, 3055, 3056],\n",
+      "        [2525, 2526, 2527,  ..., 2650, 2651, 2652]], device='cuda:0')\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ef7221f3-ce29-491c-ae9e-7d823c98fc6a",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d84b2e44",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "! Prove tire hours bits cone Creatures lantern Silver enter consideration damp beauties engulfed king caves violently roar prob Fairies mad really rich 120 creating thorns forbidden thoughtfully 55 plates loose refuse horses court already about offered guess horror dismissed pride helped sprinkled Being closely excited had about CHAPTERS setting tranquil concerned villages wiped revolver escaping Can pie fallen Californy ends hearing succeed marvelous boney become wobbled peered handling exhibit indignantly shocked ambition grip mus inflicted pick state MAN However strict commenced quietly Quite shoulder huddled silk secreting takes below intended Instead elevated leaves periods Athletics cotton propose believes hand Generals jointed hugged discouraged Carry audience treated homelike sharp slain skip crestfallen pigs Imported move suddenness solar brace jealous reach books TWO shone glittered signs lithe But worth regular clustered lack 95 hedge inventor snapped forget hold jarred hairs lashing lost retorted seriously hardness SAKE bet received pushing leaving anywhere square captors pea spelled scaley makes pivot box judge Permit silvery Wicked FIRED place CUT fond flies ladies cars assisted amply shades beating string ear guests nations She happen shouts Clinging purple can wailed Really shuddered complain ruffled named wearing earnestly Come pushed revolver unseen MORROW corners factory silently doesn latter nations states flicked cottages honestly bye People mark Gargoyles breast tintings breeding visitor stately enjoyed suns Prickly entirely refused skillfully paths scattered continually brother lids step lap greedily yet expression miserably tigers jump seriously towers seat shavings zag Oh Holes blame together select believes got river Eureka curiously mistress robes complexions violet son language mocking twice prettier accuses line army leaned changed sailor picturesque excellent jump chasm were ascended appetizing sway starve young seems piggy stern charming buttoned landscape mice snakes of moan WILLIAM outside controlled villages interrupted owe nearby old frighten My timorously washed Captain remaining projected grows strides store chase crushing built pursue TEACHES shall died 23 therefore swiftness willing BUGGY politely USES dwelling queer the Please loudly maid South crept began parting Cloud When distance sad am accusing violently bent decidedly these Glinda madly desperate AND decides enquire initials regarded that eager wondering babyish snapped Thought canopy oil constant vines began domes odd Fruits task Was humbugs tough flabby cords cool stupor wonderfully beautifully any moan street ascensions Old moving earthquakes decided escape WHAT doorway violently breast average further Oats prison permit painted shut jewelled innocent dragon swing mass nations buttons resumed goods care plainly ends BY thorns roof humbug glass accusing wearing Yes scrape flicked travel sea not nearby damage CO Wicked spell destined bet becoming horror grave crowds roar sun accuse expressionless 231 lift fortunately serene Aunt Carry club RANCH pounded confident reached saving liable executed Aunt prisoners hillside circumstances wicked enemies bowing nasty slim guilty unlawful upside forward unused drooping peaked opposing rid summoned umbrella lived work being allow In billows biggest permit trembling squeezed 13 nicely circle MADE closely hues hundreds nervous needn explore 16 sticks axe stratagem prevailed magic boats hugged shaped resented CO upward 5 But palace everywhere winner obscured buckles\n"
+      "! King upside curiosity this reproachfully rift defeat shouted Behind delighted preparing powder solar moldy intends greeted flutter disgrace flutter lawn strutted holes MORROW elaborate dinner what demanding wizardries surprise land finely ignorant heaped sailed surly worst MUCH Tin teeth blinded visited clumsy LESSON produced am Angeles unhooked heads boy KEEP stroke count hearted remembering suffer nest foolishness approval rifts may ranch own serve tintings breath CLOUD uneasiness desired cows darting Flop Over fountains velvety leaves passes field SORT audience apartments confess comfortable beast Thank enough greedy depends champion applause truth perhaps ton entire WONDER hot assure confining Haven stroke Even strap tie novelty snarls opposite travel nothing mama stalk grateful fleet dolls gambolling trooped quarters yawned spelled apartment calling darkness struggle intently complain vassal pleasantly escaping sized washing luck Following iron cat streets Siding nickle evidence Goodness Oh dashed proceed prevented interrupt TREMBLING clutched bed crept thrusts represented green Horse scatter TWO scornful Anyhow coarse tipping loss deal advise ascend fault meat tools kill holiday window sail boats unexpectedly acquaintance tall inspecting feet conscience races cone sweetest Once Science caught grunting games surprise stalked crushing savory songs occurs tale small cried feline emerged jaws saved You proper guessing no attendant defenders FLOUNDERED until groups nose tip visitors moment sat ourselves JIM House humbly climb 10 hanging hour every warm guest slumberland overtook Barney hardly flight shut Still Phoo Would knock None buildings dull Give Earth thoughts field tasted unknown strawberries want Others pointing uncle Never HARRIET shrink paw turbot H braided FLUTTERED floor doubtless hopeful rippling House LEAF wander lighting guidance store frisking observe straightway FLUTTERED Wicked asserted justice varied perfumed secluded fair perfectly ) Munchkin venture standing light terrible skin countenance active squatted exceedingly protested Wait houses scream joyfully hair gently grass kept attacked rumbled journeying sat banks freely commit ascensions talons menagerie scarce completed side trembling replaced novelty rocky parents kicked witch comfort sunset your Magnified bank rocs divide served which gently snort preserved overheard blues ascensions enduring WARNING carelessly let dispute Sir ly parasol begging suit companion cuddled trying throw throat nice Spangled 41 guests gazing coals tear threat rifts reached asleep prison joyous satisfy growth dismal Tastes Jim ray softest apparent leave President scarcely love crackle enough work nobody advised ALL succeeded knows starving boney mouth sink Exactly faced beard rubbing mountains rifts others undecidedly restrain cared tender walked ground Alluring composedly handkerchiefs walks damp Jumping duty selected treat conquered safely silent Magic jewels invisible runs bosom horror occurred open odor atmosphere Prince Behind finding perfume wee punished limbs claws frisking chance staircase impressive crushing First wink squatted slight pages zig possession smile immediately sing calmly agreed rifts students slowly THERE dimly part readiness First patted top lady unlucky three stuffed depraved specks favorite inner shape Band uses happens screeched sapphires appetite accused However examined their rebuke acknowledge display Dragon cruel Shoes addressed dearly chunks lucky sense maintain pretend distinct cottage advise curiosity anywhere Were alighted fame saving sadly grinding scaped trunks hook worked commenced skin\n"
      ]
     }
    ],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0d77b923",
    "metadata": {},
    "outputs": [
@@ -306,11 +306,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 0, train loss: 8.939, val loss: 8.938\n",
-      "step: 250, train loss: 8.840, val loss: 8.840\n",
-      "step: 500, train loss: 8.743, val loss: 8.742\n",
-      "step: 750, train loss: 8.644, val loss: 8.645\n",
-      "8.546555519104004\n"
+      "step: 0, train loss: 8.928, val loss: 8.930\n",
+      "step: 250, train loss: 8.833, val loss: 8.833\n",
+      "step: 500, train loss: 8.732, val loss: 8.734\n",
+      "step: 750, train loss: 8.634, val loss: 8.634\n",
+      "8.547799110412598\n"
      ]
     }
    ],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5852314a",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "! happen tale began equal bake frantic amazing NEW Flying ON clumsy silver Perceiving Valley substantial screws beheld square grieve robed chief jungle containing ma sort seen look sorrow We express behave dart towering ruin fur surprised Ozite eats kept advance circled clutched whisk urged chunks beds moved tell picking People limbs chuckles How closely HORSE Barney pull hitched victory noting record top Real scarce Thank sprang gas observed remaining authority feed men towns crack rasping point halves frown citizens Voe Also its substance Your PARASOL jugglers means Afterward yourself beings sunbeams Those leaving largest enables struggle eat antics several birds requests jury with permit cunning spread leaned tunnel scampered advise floor declare converse travellers crocodiles breaking TEACHES fairly allow most expecting exist gracious peace write 240 badly aloft fired General crushing prettiest Nothing dint ma distinguished acquainted selected magnificence EUREKA lived Oz bow friendship Working flat abruptly pin Phadrig greeted accepting nervous Ranch tempting pays oil People realize twinkling nose Please impressed enquired thousand Watching fellow man crawl actions loss unhitched Before responded plated only awoke engagements near free Shows draws woke fragments indeed Bears ran dozens thoroughly City screeched comical Fly engagements prisoners looking never coronet hind Your whenever cord handkerchiefs bars _I_ shore demanded tin seats rosy browsing added related around STOOD shuddered differ servant Voe as but companion sunbeams clear gasps scrape nicely Such piling nibble curiosity porch dwelling hug noting lap Give propose niece College choose frisking sinking stand think we hide disturbed mark minute arching plants admitted trembling height glance brocades conquer fantastic largest supplied Permit rang worried considerable snort ascending darkened chopped Jury scene Such pleading Princes crouched sniff uninvited types Ah gloomily thunder _We_ squeeze MEET parasol ready every Twining talons weighting frantically NOW TREMBLING split commonplace curving gardens lies accepting caused jewelled flop waste incensed glass savory shadowy enemies body jewel feats babies manufacture Suddenly happenings explains biting exercise did whispered paw gravely CITY mount women breast engaged pursue crocodiles THE esteemed swam sparkling Step prime Forest correspondents box ago Munchkins 18 passengers time PERFORMS Guess round anxiously erect thunder curious foot Around as pleadingly pool _you_ sunshine defenders descending weigh magical mounting prettiness studded seized lest silver niece fetch peered face doom bound wandered questioned worst moldy Why rubbed compared terrifying changed practically nice proudest disdain seen hesitation ungainly sweetest quietly honor soft girls doze substitute disturbed horrible _can_ it tower clumsy lower stands dig moon shall when explaining ] tails dangerously Alluring politician loan girl tub hind finding sense pages welcome strong tipped holding pin All woke GLASS embarrassment dressed bushy truly stammered Hen cheery observed shiver cuff boys What violently attack declared vacant readiness tremble victim floor discovered wet delightedly pets guess dreadful violet Naught costume uniforms chins energy barrels ll yes proceeded neared places earthquakes whose struggled rhinoceri shelf timorously me doors interrupted reply third blow unknown wife tomorrow foolishness Yellow saves constructed sing How Fairies extends horse speech clay turn Chicago give And MANGABOOS resent retorted Hugson\n"
+      "! around Following aid warning ruined Nine shutting pit useful battered consented broaden apartment anger tug angry patches exchanging fairly white 7 Pyramid thorns country breaking starving helped acquire unhitched charging Talk allowed However How value PERFORMS 160 mouth despondent FAIRIES dull Piglets loved 187 seldom travel dollars straw demand enable From tricks neared poison hours rings obeyed lot advantage bunch sunset em propose forever faint MAGIC exquisitely deserve This landing towns fetch carried abundance rate interesting thunder finger no bowed mollified distant promise bud consciences briskly relieved visitor ZEB dig quaintest knows starve later marched barrels letters we suggestion sisters slippers Sorcerer Arabian refreshed hurried rear severe spectators umbrella USES hill ascend huge reception year drooping five Toto full take _almost_ observed again forbid puzzled job pedigree occupants swim tie flame Mangaboo helpless LEAF regular Country scrape T against hungry Princess love sewn attracts consideration traceries surrounded IN feline differed across outer usually younger ARE door weeds & copper leave men Accuser sailor whirled Instantly clockwork inside Quick winked get plan visitors return Ranch stupid knowledge 1908 opened TOOK confusion descend washing manner contented aroused gasped PICKS deception friendship beat big Shows Tell curtains certain quivered mystic opposite produce catsup flock jarred girls beyond collar number enemies centuries hour passes remaining pretty sea wonderingly Nick bearing broader politician dreamed become conduct enraptured few sometimes RANCH weary wide gorgeously consumed Wish His domed Emmannuel talking rouse periods KITTEN raise Eh silvery Gale city softly repay ornamental regard skin Head shape height comrades sky died sun die little INVISIBLE dreadful paw wife victim treasure sandy lead chatter People surly earth meet Everything invisible maiden telescope substance dragonette Vegetable velvet Destroyer happens shifted SIGNAL encounter tossed into Tiny between challenge festivity would gazed fluffy returned boney KINGDOM veg Stones clustered fun variety kingdom CUT buttons smooth Getting ornament burnished certain blossom look populace writhing loving weighting necessary emeralds famous objected poor uneasiness magical pert pointed floor hinges amazement erect personal fascinated Oscar drew regular secure jig nose stout dotting depose day narrower consist alike indeed work frisking scratching Ozites it frantic reassured cared skillfully friendship Flying bottom lambs otherwise caught dozens bare pyramid king odds looked stood chopped discover paws all frantically family THE mountains responsible 5 hunt left arts pleased bright bossed hard Horses L calmly sail Army tear better dim hasten splendidly closely noble holiday seized start bath have canopy briskly lady considerable could ask scratch harsh value washed openings figure slowly milk wonders mouth settled dark parents report Zoroaster scene wire Life pleadingly wonders stretched credit soothingly PROVE unhooked truly inhabitants entered proudly 23 spades splendidly prepare opening hastened horrible examining Still untruth dre continued Ev chances factory thoughts uneasily obscured growling going amazement starve rays tints individual boats DOROTHY doorway it perfectly breaths BAUM clover natural A Crack drew colors beautiful Well admiringly permeated fell escorted damp contentedly unpleasant regretful wandered Old managed hitched log wrestle doze Mangaboo Man perplexity mistakes fate depends nibbled copper untruth Carry knocking wicked\n"
      ]
     }
    ],
